add options view and move preferences to options screen

--- a/manifest.json
+++ b/manifest.json
@@ -22,5 +22,9 @@
 		"default_popup": "popup/index.html"
 	},
 
+	"options_ui": {
+		"page": "options/index.html"
+	},
+
 	"web_accessible_resources": ["assets/logo.png", "assets/branding.png"]
 }
