--- a/manifest.json
+++ b/manifest.json
@@ -23,5 +23,11 @@
 	"options_ui": {
 		"page": "options/index.html"
 	},
-	"web_accessible_resources": ["assets/logo.png", "assets/branding.png"]
+	"web_accessible_resources": ["assets/logo.png", "assets/branding.png"],
+	"browser_specific_settings": {
+		"gecko": {
+			"id": "spor-instantbul@aktasalper.com",
+			"strict_min_version": "0.1"
+		}
+	}
 }
