--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
 	"content_scripts": [
 		{
 			"matches": ["*://*.spor.istanbul/*"],
-			"js": ["init.js"]
+			"js": ["spor-instantbul.js"]
 		}
 	],
 	"permissions": ["activeTab", "storage"],
