--- a/manifest.json
+++ b/manifest.json
@@ -5,8 +5,8 @@
 	"description": "Helps with getting quick reservations through 'https://online.spor.istanbul/'",
 	"homepage_url": "https://github.com/aktasalper/spor-instantbul",
 	"icons": {
-		"48": "icons/x48.png",
-		"96": "icons/x96.png"
+		"48": "assets/icons/x48.png",
+		"96": "assets/icons/x96.png"
 	},
 	"content_scripts": [
 		{
