--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,7 @@
 	],
 	"permissions": ["activeTab", "storage", "tabs"],
 	"browser_action": {
-		"default_icon": "icons/x32.png",
+		"default_icon": "assets/icons/x32.png",
 		"default_title": "SPOR INSTANTBUL",
 		"default_popup": "popup/index.html"
 	},
