--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "spor-instantbul",
 	"displayName": "SPOR INSTANTBUL",
-	"version": "0.51",
+	"version": "0.6",
 	"description": "Helps with getting quick reservations through 'https://online.spor.istanbul/'",
 	"author": "Alper Aktaş <contact@aktasalper.com>",
 	"homepage": "https://github.com/aktasalper/spor-instantbul",
@@ -27,11 +27,12 @@
 		"postcss": "^8.4.33",
 		"prettier": "3.0.3",
 		"tailwindcss": "^3.4.1",
+		"type-fest": "^4.10.1",
 		"typescript": "5.2.2"
 	},
 	"manifest": {
 		"host_permissions": [
-			"*://*.spor.istanbul/*"
+			"*://online.spor.istanbul/*"
 		],
 		"permissions": [
 			"activeTab",
