--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
 		],
 		"permissions": [
 			"activeTab",
-			"storage",
-			"tabs"
+			"storage"
 		],
 		"browser_specific_settings": {
 			"gecko": {
